🔁 Replaced heavy GIFs with smooth MP4 videos for better performance

--- a/index.html
+++ b/index.html
@@ -21,47 +21,47 @@
         <p style="font-size: 2.5vmin;">Happy Birthday Angelique Clariz C, Tan 🎂</p>
         <div class="letter-scroll">
           <!-- All your images/gifs -->
-          <img src="media/23.gif" alt="angelgif" />
-          <img src="media/wow.gif" alt="birthday gift" />
-          <img src="media/1.gif" alt="birthday gift" />
-          <img src="media/youthebest.gif" alt="birthday gift" />
-          <img src="media/Knock.gif" alt="birthday gift" />
-          <img src="media/matcha.gif" alt="birthday gift" />
-          <img src="media/child.JPEG" alt="Photo 1" />
-          <img src="media/11.gif" alt="birthday gift" />
-          <img src="media/P1.JPEG" alt="Photo 1" />
-          <img src="media/22.gif" alt="birthday gift" />
-          <img src="media/P2.JPEG" alt="Photo 1" />
-          <img src="media/33.gif" alt="birthday gift" />
-          <img src="media/999.PNG" alt="Photo 1" />
-          <img src="media/beautiful.gif" alt="birthday gift" />
-          <img src="media/snap.PNG" alt="Photo 1" />
-          <img src="media/44.gif" alt="birthday gift" />
-          <img src="media/starbs.JPEG" alt="Photo 1" />
-          <img src="media/55.gif" alt="birthday gift" />
-          <img src="media/angelmom.PNG" alt="Photo 1" />
-          <img src="media/66.gif" alt="birthday gift" />
-          <img src="media/daster.JPEG" alt="Photo 1" />
-          <img src="media/77.gif" alt="birthday gift" />
-          <img src="media/2.JPEG" alt="Photo 1" />
-          <img src="media/88.gif" alt="birthday gift" />
-          <img src="media/child2.JPEG" alt="Photo 1" />
-          <img src="media/cute.gif" alt="birthday gift" />
-          <img src="media/child3.JPEG" alt="Photo 1" />
-          <img src="media/daster2.gif" alt="birthday gift" />
-          <img src="media/child4.JPEG" alt="Photo 1" />
-          <img src="media/cry.gif" alt="birthday gift" />
-          <img src="media/child5.JPEG" alt="Photo 1" />
-          <img src="media/penguin.gif" alt="birthday gift" />
-          <img src="media/20.JPEG" alt="Photo 1" />
-          <img src="media/cutie.gif" alt="birthday gift" />
-          <img src="media/cutie123.PNG" alt="Photo 1" />
-          <img src="media/tiktok.gif" alt="birthday gift" />
-          <img src="media/poo.JPEG" alt="Photo 1" />
-          <img src="media/chubbycheeks.gif" alt="birthday gift" />
-          <img src="media/pckhs.JPEG" alt="Photo 1" />
-          <img src="media/wire.gif" alt="birthday gift" />
-          <img src="media/flowers.JPEG" alt="Photo 1" />
+<video src="media/23.mp4" autoplay muted loop playsinline></video>
+<video src="media/wow.mp4" autoplay muted loop playsinline></video>
+<video src="media/1.mp4" autoplay muted loop playsinline></video>
+<video src="media/youthebest.mp4" autoplay muted loop playsinline></video>
+<video src="media/Knock.mp4" autoplay muted loop playsinline></video>
+<video src="media/matcha.mp4" autoplay muted loop playsinline></video>
+<img src="media/child.JPEG" alt="Photo 1" />
+<video src="media/11.mp4" autoplay muted loop playsinline></video>
+<img src="media/P1.JPEG" alt="Photo 1" />
+<video src="media/22.mp4" autoplay muted loop playsinline></video>
+<img src="media/P2.JPEG" alt="Photo 1" />
+<video src="media/33.mp4" autoplay muted loop playsinline></video>
+<img src="media/999.PNG" alt="Photo 1" />
+<video src="media/beautiful.mp4" autoplay muted loop playsinline></video>
+<img src="media/snap.PNG" alt="Photo 1" />
+<video src="media/44.mp4" autoplay muted loop playsinline></video>
+<img src="media/starbs.JPEG" alt="Photo 1" />
+<video src="media/55.mp4" autoplay muted loop playsinline></video>
+<img src="media/angelmom.PNG" alt="Photo 1" />
+<video src="media/66.mp4" autoplay muted loop playsinline></video>
+<img src="media/daster.JPEG" alt="Photo 1" />
+<video src="media/77.mp4" autoplay muted loop playsinline></video>
+<img src="media/2.JPEG" alt="Photo 1" />
+<video src="media/88.mp4" autoplay muted loop playsinline></video>
+<img src="media/child2.JPEG" alt="Photo 1" />
+<video src="media/cute.mp4" autoplay muted loop playsinline></video>
+<img src="media/child3.JPEG" alt="Photo 1" />
+<video src="media/daster2.mp4" autoplay muted loop playsinline></video>
+<img src="media/child4.JPEG" alt="Photo 1" />
+<video src="media/cry.mp4" autoplay muted loop playsinline></video>
+<img src="media/child5.JPEG" alt="Photo 1" />
+<video src="media/penguin.mp4" autoplay muted loop playsinline></video>
+<img src="media/20.JPEG" alt="Photo 1" />
+<video src="media/cutie.mp4" autoplay muted loop playsinline></video>
+<img src="media/cutie123.PNG" alt="Photo 1" />
+<video src="media/tiktok.mp4" autoplay muted loop playsinline></video>
+<img src="media/poo.JPEG" alt="Photo 1" />
+<video src="media/chubbycheeks.mp4" autoplay muted loop playsinline></video>
+<img src="media/pckhs.JPEG" alt="Photo 1" />
+<video src="media/wire.mp4" autoplay muted loop playsinline></video>
+<img src="media/flowers.JPEG" alt="Photo 1" />
 
           <!-- 🎯 Button at the bottom -->
           <div class="birthday-message-wrapper">
